logs/beaker-common.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beaker_common-24.5.egg-info'...
Listing './lib/python3.5/site-packages/bkr'...
Listing './lib/python3.5/site-packages/bkr/common'...
Compiling './lib/python3.5/site-packages/bkr/common/helpers.py'...
***   File "./lib/python3.5/site-packages/bkr/common/helpers.py", line 82
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bkr/common/hub.py'...
***   File "./lib/python3.5/site-packages/bkr/common/hub.py", line 99
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bkr/common/krb_auth.py'...
***   File "./lib/python3.5/site-packages/bkr/common/krb_auth.py", line 50
    except krbV.Krb5Error, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bkr/common/pyconfig.py'...
***   File "./lib/python3.5/site-packages/bkr/common/pyconfig.py", line 161
    print "%2s %16s %s" % (self._tok_number, self._tok_name, self._tok_value.strip())
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bkr/common/schema'...
Compiling './lib/python3.5/site-packages/bkr/common/xmlrpc.py'...
***   File "./lib/python3.5/site-packages/bkr/common/xmlrpc.py", line 376
    except kerberos.GSSError, ex:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
